--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,12 @@ environment:
   sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
-  password_hash: 2.0.0
-  crypto: ^2.0.0
+  native_crypto:
+    git:
+        url: https://gogs.pointcheval.fr/hugo/native-crypto-flutter.git
+        path: ./
+  cipher2: 0.3.0
+  password_hash: ^2.0.0
   shifting_tabbar: ^0.3.1
   flutter:
     sdk: flutter
